--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
-    id "net.ltgt.apt-idea" version "0.19"
+    id 'net.ltgt.apt-idea' version '0.19'
+    id 'org.springframework.boot' version '2.1.1.RELEASE'
 }
 
 group 'myprojects'
