--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+#Intellij Idea
+out
+build
+.gradle
+.idea
+expenses.csv
+
+
 # Compiled class file
 *.class
 
@@ -18,11 +26,6 @@
 *.zip
 *.tar.gz
 *.rar
-
-out
-build
-.gradle
-.idea
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
