--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java'
     id 'net.ltgt.apt-idea' version '0.19'
     id 'org.springframework.boot' version '2.1.1.RELEASE'
+    id "com.palantir.docker-run" version "0.20.1"
+    id "io.spring.dependency-management" version "1.0.6.RELEASE"
 }
 
 group 'myprojects'
@@ -16,14 +18,18 @@ repositories {
 dependencies {
     compile "com.fasterxml.jackson.core:jackson-databind:2.9.7"
     compile "com.google.auto.value:auto-value-annotations:1.6.2"
-    compile "org.springframework.boot:spring-boot-starter-web:2.1.1.RELEASE"
     compile "com.google.guava:guava:27.0.1-jre"
     compile "org.apache.commons:commons-csv:1.6"
 
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    implementation "org.springframework.boot:spring-boot-starter-data-rest"
+    runtimeOnly 'org.postgresql:postgresql'
+    
     testCompile "junit:junit:4.12"
     testCompile "org.mockito:mockito-core:2.23.4"
     testCompile "org.springframework.boot:spring-boot-starter-test:2.1.1.RELEASE"
-
+    testCompile "com.h2database:h2"
     annotationProcessor "com.google.auto.value:auto-value:1.6.2"
 }
 
