Added tests and improved db connection

--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,18 @@ plugins {
 }
 
 group 'myprojects'
-version '0.1-SNAPSHOT'
+version '0.1'
 
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+}
+
+dependencyManagement {
+    imports {
+        mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
+    }
 }
 
 dependencies {
@@ -23,6 +29,7 @@ dependencies {
 
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+
     runtimeOnly 'org.postgresql:postgresql'
     
     testCompile "junit:junit:4.12"
@@ -32,3 +39,6 @@ dependencies {
     annotationProcessor "com.google.auto.value:auto-value:1.6.2"
 }
 
+bootJar {
+    launchScript()
+}
