--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,11 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/
-    username: postgres
-    password: password
+    url: jdbc:postgresql://api.piggy.bank.it:5432/piggy-bank-db
   jpa:
     hibernate:
       dialect: org.hibernate.dialect.PostgreSQLDialect
       ddl-auto: update
+      generate-ddl: true
     properties:
       hibernate:
         jdbc:
