--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://api.piggy.bank.it:5432/piggy-bank-db
+    url: jdbc:postgresql://localhost:5432/piggy-bank-db
   jpa:
     hibernate:
       dialect: org.hibernate.dialect.PostgreSQLDialect
