--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,11 @@
 spring:
+  datasource:
+    url: jdbc:postgresql://127.0.0.1:5432/piggy_bank
+    username: postgres
+    password: password
   jpa:
-    hibernate:
-      dialect: org.hibernate.dialect.PostgreSQLDialect
-      ddl-auto: update
-      generate-ddl: true
     properties:
       hibernate:
         jdbc:
           lob:
             non_contextual_creation: true
-
-
