--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,3 +9,10 @@ services:
       POSTGRES_DB: piggy_bank
     ports:
     - 5432:5432
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8088:8080
+
