--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,15 @@
 version: '3.1'
 
 services:
+  backend:
+    build:
+      context: .
+      args:
+        JAR_FILE: piggy-bank-backend.jar
+    depends_on:
+      - "db"
+    environment:
+      - SPRING_PROFILES_ACTIVE=production
   db:
     image: postgres
     restart: always
