--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,15 @@ ext {
 }
 
 dependencies {
-    compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
-    compile "com.google.guava:guava:$guavaVersion"
-
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+    implementation "com.google.guava:guava:$guavaVersion"
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+
+    implementation "org.springdoc:springdoc-openapi:1.3.0"
+    implementation "org.springdoc:springdoc-openapi-ui:1.3.0"
+
 
     runtimeOnly 'org.postgresql:postgresql'
     
