Added h2 as standard db for local environment

--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,14 @@ dependencies {
     implementation "org.springdoc:springdoc-openapi:1.3.0"
     implementation "org.springdoc:springdoc-openapi-ui:1.3.0"
 
+    implementation "com.h2database:h2"
 
     runtimeOnly 'org.postgresql:postgresql'
     
     testCompile "junit:junit:$junitVersion"
     testCompile "org.mockito:mockito-core:$mockitoVersion"
     testCompile "org.springframework.boot:spring-boot-starter-test"
-    testCompile "com.h2database:h2"
+    compile "com.h2database:h2"
 
     annotationProcessor "com.google.auto.value:auto-value:$autovalueVersion"
     compile "com.google.auto.value:auto-value-annotations:$autovalueVersion"
