--- a/build.gradle
+++ b/build.gradle
@@ -17,24 +17,26 @@ ext {
     autovalueVersion = "1.7"
     jacksonVersion = "2.10.3"
     guavaVersion = "28.2-jre"
+    openapiVersion = "1.3.0"
     mockitoVersion = "3.3.3"
     junitVersion = "4.13"
 }
 
 dependencies {
-    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
-    implementation "com.google.guava:guava:$guavaVersion"
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 
-    implementation "org.springdoc:springdoc-openapi:1.3.0"
-    implementation "org.springdoc:springdoc-openapi-ui:1.3.0"
+    runtimeOnly "com.h2database:h2"
 
-    implementation "com.h2database:h2"
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+    implementation "com.google.guava:guava:$guavaVersion"
+
+    implementation "org.springdoc:springdoc-openapi:$openapiVersion"
+    implementation "org.springdoc:springdoc-openapi-ui:$openapiVersion"
 
     runtimeOnly 'org.postgresql:postgresql'
-    
+
     testCompile "junit:junit:$junitVersion"
     testCompile "org.mockito:mockito-core:$mockitoVersion"
 
