--- a/build.gradle
+++ b/build.gradle
@@ -27,14 +27,17 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 
-    runtimeOnly "com.h2database:h2"
-
     implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
     implementation "com.google.guava:guava:$guavaVersion"
 
     implementation "org.springdoc:springdoc-openapi:$openapiVersion"
     implementation "org.springdoc:springdoc-openapi-ui:$openapiVersion"
 
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.1'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.1'
+
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.1'
+    runtimeOnly "com.h2database:h2"
     runtimeOnly 'org.postgresql:postgresql'
 
     testCompile "junit:junit:$junitVersion"
