--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,7 @@ spring:
     generate-ddl: true
 
     database-platform: org.hibernate.dialect.H2Dialect
+
+authentication:
+  token:
+    type: jwt
