--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ ext {
     openapiVersion = "1.3.0"
     mockitoVersion = "3.3.3"
     junitVersion = "4.13"
+    jjwtVersion = "0.11.1"
 }
 
 dependencies {
@@ -33,10 +34,10 @@ dependencies {
     implementation "org.springdoc:springdoc-openapi:$openapiVersion"
     implementation "org.springdoc:springdoc-openapi-ui:$openapiVersion"
 
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.1'
-    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.1'
+    implementation "io.jsonwebtoken:jjwt-api:$jjwtVersion"
+    implementation "io.jsonwebtoken:jjwt-jackson:$jjwtVersion"
 
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.1'
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:$jjwtVersion"
     runtimeOnly "com.h2database:h2"
     runtimeOnly 'org.postgresql:postgresql'
 
