--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ ext {
     openapiVersion = "1.3.0"
     mockitoVersion = "3.3.3"
     junitVersion = "4.13"
+    jjwtVersion = "0.11.1"
 }
 
 dependencies {
@@ -27,14 +28,17 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 
-    runtimeOnly "com.h2database:h2"
-
     implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
     implementation "com.google.guava:guava:$guavaVersion"
 
     implementation "org.springdoc:springdoc-openapi:$openapiVersion"
     implementation "org.springdoc:springdoc-openapi-ui:$openapiVersion"
 
+    implementation "io.jsonwebtoken:jjwt-api:$jjwtVersion"
+    implementation "io.jsonwebtoken:jjwt-jackson:$jjwtVersion"
+
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:$jjwtVersion"
+    runtimeOnly "com.h2database:h2"
     runtimeOnly 'org.postgresql:postgresql'
 
     testCompile "junit:junit:$junitVersion"
