Feature/use jwt token to trust user (#5)
* minor code refactoring

* Added test on logout in e2e

* Added JwtToken validator that extract issuer from the token

* Use a single SecretKey instance for all the application

* Generate new token with issuer when feature is enabled

* Added JwtTokenBuilder if issue is requested

* Validate token usigin issuer as username

* Fixed bug in logout

* Splitted JwtTokenHelper in two different classes

* Unified feature flags format

* Added logic to choose Token Strategy in more readble way

* Package organized by features

Co-authored-by: Santolo Tubelli <santolo.tubelli@jobrapido.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
 
     database-platform: org.hibernate.dialect.H2Dialect
 
-authentication:
-  token:
-    type: jwt
+piggy_bank:
+  features:
+    issuer_to_resolve_user: true
+    jwt_token_type: true
