Minor refactoring to improve code, added property to decide when populate database with fake data at startup (for local development), added explicit property by ENV in application-production config file

--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -4,5 +4,10 @@ spring:
 
 piggy_bank:
   features:
-    issuer_to_resolve_user: true
-    jwt_token_type: true
+    issuer_to_resolve_user: ${PIGGY_BANK_FEATURES_ISSUER_TO_RESOLVE_USER}
+    jwt_token_type: ${PIGGY_BANK_FEATURES_JWT_TOKEN_TYPE}
+
+security:
+  keystore:
+    location: ${SECURITY_KEYSTORE_LOCATION}
+    password: ${SECURITY_KEYSTORE_PASSWORD}
