--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -1,3 +1,13 @@
 spring:
   datasource:
     url: jdbc:postgresql://db:5432/piggy_bank
+
+piggy_bank:
+  features:
+    issuer_to_resolve_user: ${PIGGY_BANK_FEATURES_ISSUER_TO_RESOLVE_USER}
+    jwt_token_type: ${PIGGY_BANK_FEATURES_JWT_TOKEN_TYPE}
+
+security:
+  keystore:
+    location: ${SECURITY_KEYSTORE_LOCATION}
+    password: ${SECURITY_KEYSTORE_PASSWORD}
