Migrate to jdk11

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:8-jdk-alpine
+FROM adoptopenjdk/openjdk11:alpine-slim
 VOLUME /data
 ARG JAR_FILE=piggy-bank-backend.jar
 COPY ${JAR_FILE} app.jar
