--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'net.ltgt.apt-idea' version '0.21'
     id 'org.springframework.boot' version '2.3.4.RELEASE'
     id "io.spring.dependency-management" version "1.0.10.RELEASE"
+    id "nebula.integtest" version "7.0.9"
 }
 
 group 'myprojects'
@@ -54,6 +55,10 @@ dependencies {
 }
 
 test {
+    useJUnitPlatform ()
+}
+
+integrationTest {
     useJUnitPlatform()
 }
 
